tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BeeBreeding-AAAAAAAAAAAAAAAAAAAAEw==__VibrantAlloy-AAAAAAAAAAAAAAAAAAAIig==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2186,
  "prerequisites": [
    2187,
    2188
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Finally. It was a long, hazardous road, but you can now get Vibrant Alloy directly from a bee. Great job. You'll need a Block of Vibrant Alloy. Breed them from Energetic Alloy and Phantasmal.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Vibrant Alloy",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2187,
    2188
  ],
  "rewards": [],
  "tasks": []
}
