tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BeeBreeding-AAAAAAAAAAAAAAAAAAAAEw==__Volcanic-ysj8avl1SESH2ibGOS3qjQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 17975352945573489293,
  "prerequisites": [
    2176,
    1321321503602240594
  ],
  "properties": {
    "auto_claim": false,
    "desc": "One step closer to your goal, these bees can be bred from Furious and Demonic Bees while inside the Nether. Just like their Furious counterparts, they will spawn fire charges while working.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Volcanic",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2176,
    1321321503602240594
  ],
  "rewards": [],
  "tasks": []
}
