tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BeeBreeding-AAAAAAAAAAAAAAAAAAAAEw==__Wither-AAAAAAAAAAAAAAAAAAAIxw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2247,
  "prerequisites": [
    2246,
    2248
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The Wither bee will let you generate Wither skulls and small amounts of Nether star dust. It requires a block of Nether Star, and must be bred in the End. Breed them from Withering and Draconic.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Wither",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2246,
    2248
  ],
  "rewards": [],
  "tasks": []
}
