tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BeeBreeding-AAAAAAAAAAAAAAAAAAAAEw==__Zinc-AAAAAAAAAAAAAAAAAAAIkw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2195,
  "prerequisites": [
    2192,
    2193
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Zinc makes great early game item pipes when mixed into brass. Also, these bees have a small chance of producing Gallium combs, which is very useful for players needing to make circuits or SMD devices. These bees will require a Zinc block. Breed them from Tin and Iron.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Zinc",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2192,
    2193
  ],
  "rewards": [],
  "tasks": []
}
